--- a/frontend/src/pages/cart.css
+++ b/frontend/src/pages/cart.css
@@ -14,12 +14,32 @@
   border-radius: 25px;
   margin: 30px;
 }
+.my-yardItem {
+  width: 700px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 25px;
+  margin: 30px;
+}
 
 .my-cartItem img {
   width: 200px;
 }
+.my-yardItem img {
+  width: 125px;
+  margin-left: 20px;
+  margin-right: 50px;
+  align-items: flex-start;
+}
 
 .my-cartItem .my-description {
+  width: 100%;
+  font-size: 30px;
+}
+
+.my-yardItem .my-description {
   width: 100%;
   font-size: 30px;
 }
