--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -21,6 +21,15 @@ nav ul{
 nav ul li{
   list-style: none;
 }
+nav ul li .my-user-icon{
+  display: block;
+  text-decoration: none;
+  color: white;
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  border-radius: 0.5rem;
+  margin-right: 30px;
+}
 nav ul li a {
   display: block;
   text-decoration: none;
@@ -32,4 +41,58 @@ nav ul li a {
 }
 nav ul li a:not(.active):hover{
   background-color: #172554;
+}
+nav ul li .my-user-icon:not(.active):hover{
+  background-color: #172554;
+}
+.my-sub-menu-wrap{
+  position: absolute;
+  top: 11%;
+  right: 0%;
+  width: 320px;
+}
+.my-sub-menu{
+  background: #172554;
+  padding: 20px;
+
+}
+.my-user-info{
+  display: flex;
+  align-items: center;
+}
+.my-user-info h3 {
+  font-weight: 500;
+  margin-right: 10px; /* Add margin to separate icon and text */
+}
+.my-sub-menu hr{
+  border: 0;
+  height: 1px;
+  width: 100%;
+  background: #ccc;
+  margin: 15px 0 10px;
+}
+
+.my-sub-menu-link{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: chocolate;
+  margin: 12px 0;
+}
+.my-sub-menu-link .lp{
+  width: 100%;
+  display: flex;
+  background: white;
+}
+.my-sub-menu-wrap.active{
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: var(--speed) ease;
+}
+.my-sub-menu-wrap.inactive{
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-20px);
+  transition: var(--speed) ease;
 }
