nevigate admin page

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -8,7 +8,7 @@ nav {
   align-items: center;
   background-color: #0f172a;
 }
-nav .username {
+nav .my-username {
   font-size: 1.5rem;
   margin: 1rem;
   font-weight: bold;
