--- a/frontend/src/pages/shop.css
+++ b/frontend/src/pages/shop.css
@@ -15,12 +15,31 @@
 .my-product {
   border-radius: 15px;
   width: 300px;
-  height: 350px;
-  margin: 110px;
+  height: auto; /* Make the height auto */
+  margin: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 20px; /* Adjust the padding as needed */
+  border: 2px solid transparent; /* Set a solid border */
+}
+
+.my-product img {
+  height: auto;
+  width: 50px;
+  
+}
+
+.my-product .my-description {
+  text-align: center;
+}
+
+.my-product:hover {
+  transition: 0.3s ease-in;
+  cursor: pointer;
+  border: 2px solid #000;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .my-product img {
@@ -34,6 +53,8 @@
 .my-product:hover {
   transition: 0.3s ease-in;
   cursor: pointer;
+  border: 2px solid #000;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .my-addToCartBttn {
