--- a/frontend/src/Admin/SideBar.css
+++ b/frontend/src/Admin/SideBar.css
@@ -1,12 +1,12 @@
 
 .sidebar ul li :hover{
-    background-color: gray;
+    background-color: #339900;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .active{
-    background-color: gray;
+    background-color: #339900;
     border-radius: 5px;
 }
 
