--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,7 +1,13 @@
-.active {
+.active:not(.my-navbar-title) {
   background-color: #1d4ed8;
 }
-
+.my-navbar-title {
+  font-size: 2em; /* Adjust as needed */
+  font-weight: bold;
+  background: #0f172a;
+  text-decoration: none;
+  /* Add any other styles you want for the title */
+}
 nav {
   display: flex;
   justify-content: space-between;
