--- a/frontend/src/pages/Rent.css
+++ b/frontend/src/pages/Rent.css
@@ -49,12 +49,22 @@
     padding: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    border: 2px solid transparent;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-
+.my-yard:hover {
+    transition: 0.3s ease-in;
+  cursor: pointer;
+  border: 2px solid #000;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  .my-yard-image{
+    scale: 1.05;
+    transition: 0.2s ease-in;
+}
+}
 .my-yard-description {
     display: flex;
     justify-content: center;
@@ -75,6 +85,8 @@
 .my-yard-kip {
     margin: 0 0 10px;
     color: #333;
+    justify-content: center;
+    text-align: center;
 }
 
 .my-yard-button {
@@ -88,4 +100,14 @@
 
 .my-yard-button:hover {
     background-color: #0056b3;
+}
+.my-yard-price {
+    font-weight: 600;
+    text-decoration: none;
+    color: red;
+    text-align: center;
+}
+.my-yard-div {
+    display: flex;
+    justify-content: center;
 }
